--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,1 +1,6 @@
-<p>user works!</p>
+<div>
+  <button (click)="onSelectUser()">
+    <img [src]="imgPath" [alt]="selectedUser.name"/>
+    <span>{{ selectedUser.name }}</span>
+  </button>
+</div>
